# differentiable-programming-summer-school-2025

./: .gitignore  .pre-commit-config.yaml  README.md  _quarto.yml  index.html  index.qmd  install.sh  install_tapenade.sh  pylock.toml  pyproject.toml  requirements.txt  search.json  stripout.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy-notebooks.yml
session1/: notebook.ipynb
session1/exercise1/: subroutine1.f90
session1/exercises/fg/: Makefile  g.f90
session1/exercises/ode/: .gitignore  Makefile  backward_euler.f90  cost.f90  cost_function.f90  cost_mod.f90  forward_euler.f90  gradient_descent.f90  theta.f90  theta_method_mod.f90  theta_methods.f90
session1/exercises/sparse/: .gitignore  Makefile  central_diff.f90  central_diff_mod.f90  compressed_jacobian.f90  dense_jacobian.f90  diffsizes_compressed.f90  diffsizes_dense.f90
session2/: notebook.html  notebook.ipynb
session2/exercises/fg/: .gitignore  Makefile  dot_product_test.f90  f.f90  f_mod.f90  g_mod.f90
session2/exercises/speelpenning/: .gitignore  Makefile  diffsizes.f90  diffsizes_gradient.f90  diffsizes_hessian.f90  speelpenning.f90  view_hessian.f90
site_libs/bootstrap/: bootstrap-12bae9fb4b34dc8fa8f76534337fdbf7.min.css
